# uav

./: .gitignore  .gitmodules  README.md  requirements-uav-tested.txt  text.txt
config/: uav_env.sh
docs/: INSTALL.md  PX4_GAZEBO_KEYBOARD.md  XAI_SAC_GAZEBO.md
src/uav_backend_gazebo_px4/: README.md  package.xml  setup.cfg  setup.py
src/uav_backend_gazebo_px4/uav_backend_gazebo_px4/: px4_backend_adapter.py  px4_offboard_adapter.py  state_monitor.py
src/uav_bringup/: package.xml  setup.cfg  setup.py
src/uav_bringup/launch/: px4_gazebo_depth.launch.py
src/uav_control/: package.xml  setup.py
src/uav_control/uav_control/: keyboard_cmd_vel.py
src/uav_evaluate/: package.xml  setup.cfg  setup.py
src/uav_evaluate/resource/: uav_evaluate
src/uav_evaluate/scripts/: evaluate_xai_sac
src/uav_evaluate/test/: test_copyright.py  test_pep257.py
src/uav_evaluate/uav_evaluate/: __init__.py  evaluate.py
src/uav_state/: package.xml  setup.cfg  setup.py
src/uav_state/uav_state/: state_monitor.py  state_monitor_gui.py
src/uav_train/: package.xml  setup.cfg  setup.py
src/uav_train/config/: xai_sac_gazebo.yaml
src/uav_train/resource/: uav_train
src/uav_train/scripts/: train_xai_sac
src/uav_train/uav_train/: __init__.py  config.py  env.py  gazebo_adapter.py  observation.py  reward.py  train.py
