<?xml version="1.0"?>
<package format="3">
  <name>uav_evaluate</name>
  <version>0.0.1</version>
  <description>Evaluate trained XAI SAC policies on the UAV ROS interface.</description>

  <maintainer email="uav@example.com">UAV Maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>uav_train</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
